--- a/index.html
+++ b/index.html
@@ -34,8 +34,10 @@
                 <option value="1">P(R|A)</option>
                 <option value="2">P(T|A)</option>
                 <option value="3">P(A)</option>
-                <option value="4">P(AB)</option>
-                <option value="5">P(A|B)</option>
+                <option value="4">P(A|R)</option>
+                <option value="5">P(A|T)</option>
+                <option value="6">P(AT)</option>
+                <option value="7">P(AR)</option>
               </select>
               <input type="button" class="btn btn-default" name="enviar" id="calca" value="Calcular">
               <br>
@@ -51,8 +53,10 @@
                 <option value="1">P(R|B)</option>
                 <option value="2">P(T|B)</option>
                 <option value="3">P(B)</option>
-                <option value="4">P(BA)</option>
-                <option value="5">P(B|A)</option>
+                <option value="4">P(B|R)</option>
+                <option value="5">P(B|T)</option>
+                <option value="6">P(BT)</option>
+                <option value="7">P(BR)</option>
               </select>
               <input type="button" class="btn btn-default" name="enviar" id="calcb" value="Calcular">
               <br>
